<resources>

    <string name="w2m" translatable="false">Word2Mouth</string>
    <string name="login">Login</string>
    <string name="login_button">Create or login into your Word2Mouth account to upload your content online.</string>
    <string name="create_button">Create your own content</string>
    <string name="share_button">Share or receive your own content</string>
    <string name="watch_button">Watch your own content</string>
    <string name="watch">Watch</string>
    <string name="create">Create</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="search">Search</string>


    <string name="app_name" translatable="false">SlidePasserTrial</string>
    <string name="online">Online</string>
    <string name="teaching">Teaching</string>


    <string name="settings">Settings</string>
    <string name="title_activity_teach_main" translatable="false">TeachActivityMain</string>
    <string name="title">Title</string>
    <string name="instructions">Instructions</string>
    <string name="course_summary">Course Summary</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="video_selector">Video Selector</string>
    <string name="gallery">Gallery Photos</string>

    <string name="learn">Learn</string>

    <string name="bluetooth_explain">Share offline via bluetooth</string>
    <string name="offline">On Device</string>
    <string name="query">Search Method</string>
    <string name="speakSearch">Speak Search</string>
    <string name="fingerQuery">Finger Query</string>
    <string name="searchProfile">Search by Profile</string>
    <string name="searchCategory">Search by Category</string>
    <string name="searchLanguage">search by Language</string>
    <string name="listenSearch">Listen to Search</string>
    <string name="recordSearch">Record Speach Search</string>
    <string name="unfollowCourse">Unfollow Course. You will not be notified when a new Lecture has been made available online.</string>
    <string name="followCourse">Follow Course. You will be notified when a new lecture has been made available.</string>
    <string name="downloadLecture">Download Lecture</string>
    <string name="nextSlide">Next Slide</string>
    <string name="previousSLide">Previous Slide</string>
    <string name="uploadCourse">upload selected course</string>
    <string name="editCourse">edit selected course</string>
    <string name="createCourse">create a course</string>
    <string name="uploadLesson">Upload Lesson to Firebase</string>
    <string name="editLecture">edit Lecture</string>
    <string name="createLecture">create Lecture</string>
    <string name="recordWithMicrophone">record audio with Microphone</string>
    <string name="addPhotoThumbnail">Add a photo thumbnail</string>
    <string name="lectureSummary">Lecture Summary</string>
    <string name="createSlide">Create a slide</string>
    <string name="editSlide">Edit selected slide</string>
    <string name="logout">Logout</string>
    <string name="profilePicture">Add profile picture to your Account.</string>
    <string name="followers"># Followers</string>
    <string name="course_data_summary">Course Data Summary</string>
    <string name="downloads"># Downloads</string>
    <string name="statistics">statistics</string>
    <string name="learner">Learner</string>
    <string name="teacher">Teacher</string>
    <string name="onDevice">On This Device</string>
    <string name="onInternet">On the Internet</string>
    <string name="totalTimeGraphTitle">Total Time Spent On Course</string>
    <string name="time">Time (s)</string>
    <string name="instance">Instances</string>
    <string name="sevenRollingAverageTitle">7 Rolling Average Time Spent on Course</string>
    <string name="totalTimeGraphLectureTitle">"Total Time Spent on Lecture "</string>
    <string name="last7Days">Last 7 Days</string>
    <string name="sevenRollingAverageLectureTitle">7 Day Rolling Average on Time Spent on Lecture</string>
    <string name="slideNumber">Slide Number</string>
    <string name="clicksAudioTitleLecture">Counter of Audio Listens Per Slide on Lecture</string>
    <string name="viewAudio">Audio Listens</string>
    <string name="videoViewsTitleLecture">Counter of Video Views Per Slide on Lecture</string>
    <string name="videoViews">Video Views</string>
    <string name="most_viewed_slide">Most Viewed Slide</string>
    <string name="least_viewed_slide">Least Viewed Slide</string>
    <string name="lecture_data_summary">Lecture Data Summary</string>
    <string name="TimeMetrics">Time Metrics</string>
    <string name="videoMetrics">Video Metrics</string>
    <string name="audioMetrics">Audio Metrics</string>
    <string name="most_viewed_lecture">Most Viewed Lecture</string>
    <string name="least_viewed_lecture">Least Viewed Lecture</string>
    <string name="speakStatisticsInformation">Speak Statistics Of Lecture</string>
    <string name="speakStatisticsInformationCourse">Speak Statistics Of Course</string>

    <string name="numberDownloads">Number of Downloads</string>
    <string name="numberFollowers">Number of Followers</string>
    <string name="pairedDevices">Paired Bluetooth Devices - Device appears below if you can share content with it</string>
    <string name="profilePictureSelection">Profile Picture Selection</string>
    <string name="thumbnailSelection">Thumbnail Selection</string>
    <string name="videoSelection">Video Selection</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="internetNotConnected">Internet not Connected</string>
    <string name="new_course_notification">New Course Notification</string>
    <string name="sign_in_dialog">Sign In Dialog</string>
    <string name="bluetoothSpeakInstructions">Bluetooth Spoken Instructions</string>
    <string name="discoverableDeviceSelect">Select a discoverable device. These are listed in purple at the top</string>
    <string name="pairedDeviceSelect">You will share the content with Device Named </string>
    <string name="timeInSeconds">Time (s)</string>
    <string name="color">Colour</string>
    <string name="lectureName">Lecture Name</string>
    <string name="legend">Legend</string>
    <string name="noAudioFile">No audio File</string>
    <string name="downloadCompleted">Download Completed</string>
    <string name="dimissingNotification">Dismissing Notification</string>
    <string name="retrieveContentFirebase">Retrieving the new content from Firebase</string>
    <string name="deviceNotBluetoothSuported">Device does not support Bluetooth</string>
    <string name="onBluetooth">Turning on Bluetooth</string>
    <string name="btON">Bluetooth On</string>
    <string name="needBTOn">Device needs Bluetooth ON to send Files.</string>
    <string name="listeningBT">Listening</string>
    <string name="connectedBT">Connected</string>
    <string name="connectionFailBT">Connection Failed</string>
    <string name="contentSentBT">Content Sent</string>
    <string name="checkOffline">Check Offline!</string>
    <string name="notreceivedproperly">File not received properly</string>
    <string name="languageNotSupported">Language not supported</string>
    <string name="initializationFailedSST">Initialization failed</string>
    <string name="accessStorage">Please allow access to Storage</string>
    <string name="storagePermissionSharingButton">Need Storage Permission For Share Button</string>
    <string name="permissStorageLearnButton">Need Storage Permission For Learn Button</string>
    <string name="permissionDeleteButton">Need Storage Permission For Delete Button</string>
    <string name="firstSlide">First Slide</string>
    <string name="endslideShow">End Of Slide Show</string>
    <string name="retrievingNextSlide">Retrieve Next Slide</string>
    <string name="allowInternetAccess">Please allow access to Internet Access</string>
    <string name="notRetrieveTeacher">Could not retrieve the teachers</string>
    <string name="notretrieveQuery">Could not retrieve the query</string>
    <string name="downloadingLecture">Downloading the Lecture</string>
    <string name="deviceSupportSpeechInput">Your device does not support speech input</string>
    <string name="fetchingGallery">Fetching from the gallery</string>
    <string name="fetchingCameraRoll">Fetching from the camera roll</string>
    <string name="accesAudio">Please allow access to audio</string>
    <string name="accessCamera">Please allow access to Camera</string>
    <string name="retrievingPreviousSlide">Retrieve Previous Slide</string>
    <string name="createNewSlide">Create New Slide</string>
    <string name="startRecording">Start Recording</string>
    <string name="stopRecording">Stop Recording</string>
    <string name="uploadOtherTeacherContent">Cannot upload a different Teacher\'s content</string>
    <string name="TeacherLoginToUpload">Teacher must login to upload content</string>
    <string name="mustCreateAccount">Must create an Account</string>
    <string name="creatingTeacherOnly">Creating teacher must login to upload content</string>
    <string name="uploadSuccessful">Upload Successful</string>
    <string name="detailSaved">Details saved</string>
    <string name="detailsNotSaved">Details not saved</string>
    <string name="couldNotRetrieveCourse">\"Could not retrieve courses for \"</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="internet">Internet</string>
    <string name="course_name">Course Name</string>
    <string name="type_course_name">Type course name</string>
    <string name="language_selection">Language Selection</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="category_selection">Category Selection</string>
    <string name="lecture_name">Lecture Name</string>
    <string name="thumbnail_selection">Thumbnail Selection</string>


</resources>