<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/sign_in_dialog"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/dismiss"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <ImageButton
        android:id="@+id/signIn"
        android:layout_width="104dp"
        android:layout_height="92dp"
        android:layout_alignEnd="@id/dismiss"
        android:layout_alignRight="@id/dismiss"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@color/colorWhite"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dismiss"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_account_black">

    </ImageButton>

    <ImageButton
        android:id="@+id/dismiss"
        android:layout_width="104dp"
        android:layout_height="92dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:background="@color/colorWhite"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        android:text="@string/gallery"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signIn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_unfollow">

    </ImageButton>

</androidx.constraintlayout.widget.ConstraintLayout>