<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".share.ShareMenuActivity">

    <TextView
        android:id="@+id/title_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/share"
        android:textColor="@color/colorWhite"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/download_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/colorWhite"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/upload_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/upload_button"
        app:srcCompat="@drawable/receive" />

    <ImageButton
        android:id="@+id/upload_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="125dp"
        android:backgroundTint="@color/colorWhite"
        android:scaleType="fitCenter"

        app:layout_constraintBottom_toTopOf="@+id/bluetooth_button"
        app:layout_constraintEnd_toStartOf="@+id/download_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_menu"
        app:layout_constraintVertical_bias="0.106"
        app:srcCompat="@drawable/upload" />

    <ImageButton
        android:id="@+id/bluetooth_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:backgroundTint="@color/colorWhite"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/text_bluetooth_button"
        app:layout_constraintEnd_toStartOf="@+id/internet_button"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/local_connection" />

    <ImageButton
        android:id="@+id/internet_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:backgroundTint="@color/colorWhite"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bluetooth_button"
        app:srcCompat="@drawable/mobile_data" />

    <TextView
        android:id="@+id/text_upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        app:layout_constraintEnd_toEndOf="@+id/upload_button"
        app:layout_constraintStart_toStartOf="@+id/upload_button"
        app:layout_constraintTop_toBottomOf="@+id/upload_button" />

    <TextView
        android:id="@+id/text_download_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download"
        app:layout_constraintBottom_toBottomOf="@+id/text_upload_button"
        app:layout_constraintEnd_toEndOf="@+id/download_button"
        app:layout_constraintStart_toStartOf="@+id/download_button"
        app:layout_constraintTop_toBottomOf="@+id/download_button" />

    <TextView
        android:id="@+id/text_bluetooth_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="248dp"
        android:text="@string/bluetooth"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bluetooth_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bluetooth_button" />

    <TextView
        android:id="@+id/text_internet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/internet"
        app:layout_constraintBottom_toBottomOf="@+id/text_bluetooth_button"
        app:layout_constraintEnd_toEndOf="@+id/internet_button"
        app:layout_constraintStart_toStartOf="@+id/internet_button" />

    <ImageButton
        android:id="@+id/search_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/colorWhite"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_search" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="@+id/search_button"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="@+id/search_button"
        app:layout_constraintTop_toBottomOf="@+id/search_button" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="50dp"
        android:layout_height="50dp"

        app:layout_constraintEnd_toEndOf="@+id/title_menu"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_people" />


</androidx.constraintlayout.widget.ConstraintLayout>