<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="259dp"
        android:background="@color/colorWhite">
        <RelativeLayout
            android:id="@+id/video_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textAlignment="center"
                android:text="@string/video_selector"
                android:textColor="@color/colorPrimary"
                android:gravity="center_horizontal">
            </TextView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/video_selector"
            android:layout_marginTop="52dp">

            <ImageButton
                android:id="@+id/finger_chooser"
                android:layout_width="104dp"
                android:layout_height="92dp"
                android:layout_alignTop="@+id/speak_chooser"
                android:layout_alignRight="@id/speak_chooser"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="4dp"
                android:layout_marginRight="25dp"
                android:background="@color/colorWhite"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/finger_search"
                android:layout_alignEnd="@id/speak_chooser"
                android:contentDescription="@string/todo"
                android:layout_marginEnd="25dp"
                android:layout_alignParentEnd="true">

            </ImageButton>

            <ImageButton
                android:id="@+id/speak_chooser"
                android:layout_width="104dp"
                android:layout_height="92dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="25dp"
                android:background="@color/colorWhite"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_speak"
                android:text="@string/gallery"
                android:textSize="30sp"
                android:contentDescription="@string/todo"
                android:layout_alignParentStart="true"
                android:layout_marginStart="25dp">

            </ImageButton>
        </RelativeLayout>


    </RelativeLayout>
</RelativeLayout>