<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/data_title"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@color/fui_bgAnonymous"
                android:gravity="center_horizontal"
                android:text="@string/lecture_data_summary"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/delete_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/data_title">

                <TableRow>

                    <TextView
                        android:padding="3dip"
                        android:text="@string/downloads"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/number_downloads"
                        android:gravity="right"
                        android:padding="3dip"
                        android:text="0"
                        android:textAlignment="center"
                        tools:ignore="RtlCompat" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="3dip"
                        android:text="@string/most_viewed_slide"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/mostPopularSlide"
                        android:gravity="right"
                        android:padding="3dip"
                        android:text=""
                        android:textAlignment="center"
                        tools:ignore="RtlCompat" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="3dip"
                        android:text="@string/least_viewed_slide"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/leastPopularSlide"
                        android:gravity="right"
                        android:padding="3dip"
                        android:text=""
                        android:textAlignment="center"
                        tools:ignore="RtlCompat" />
                </TableRow>

            </TableLayout>

            <ImageButton
                android:id="@+id/speakStatistics"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/colorWhite"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableLayout"
                app:srcCompat="@drawable/ic_speak">

            </ImageButton>


            <TextView
                android:id="@+id/time_graph_Title"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@color/fui_bgAnonymous"
                android:gravity="center_horizontal"
                android:text="@string/TimeMetrics"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/speakStatistics" />


            <com.jjoe64.graphview.GraphView
                android:id="@+id/timeGraph"
                android:layout_width="match_parent"

                android:layout_height="200dip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_graph_Title" />


            <com.jjoe64.graphview.GraphView
                android:id="@+id/time7Graph"
                android:layout_width="match_parent"

                android:layout_height="200dip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeGraph" />

            <TextView
                android:id="@+id/videoMetrics"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@color/fui_bgAnonymous"
                android:gravity="center_horizontal"
                android:text="@string/videoMetrics"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/time7Graph" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/videoGraph"
                android:layout_width="match_parent"

                android:layout_height="200dip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/videoMetrics" />


            <TextView
                android:id="@+id/soundMetrics"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@color/fui_bgAnonymous"
                android:gravity="center_horizontal"
                android:text="@string/audioMetrics"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/videoGraph" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/soundGraph"
                android:layout_width="match_parent"
                android:layout_height="200dip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/soundMetrics" />


            <TextView
                android:id="@+id/fakeDataButton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="@color/fui_bgAnonymous"
                android:gravity="center_horizontal"
                android:text="Fake Data"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/soundGraph" />

            <Button
                android:id="@+id/fakeButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/colorWhite"
                android:text="Fake Data"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fakeDataButton" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
