<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/slide_title_text_learn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/title"
            android:textSize="30sp">

        </TextView>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="342dp">

        <VideoView
            android:id="@+id/video_view_learn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />



        <ImageButton
            android:id="@+id/watch_video"
            app:srcCompat="@drawable/ic_watch"
            android:scaleType="fitCenter"
            android:layout_width="115dp"
            android:layout_height="74dp"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:visibility="invisible"
            android:contentDescription="@string/todo" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:layout_weight="0.4">

        <TextView
            android:id="@+id/instructions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/instructions"
            android:textAlignment="viewStart"
            android:textSize="30sp"
            android:gravity="start" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0.52">

        <ImageButton
            android:id="@+id/button_next"
            android:layout_width="115dp"
            android:layout_height="74dp"
            android:layout_alignParentRight="true"
            app:srcCompat="@drawable/ic_next_arrow"
            android:scaleType="fitCenter"
            android:background="@color/colorWhite"
            android:textSize="30sp"
            android:contentDescription="@string/todo"
            android:layout_alignParentEnd="true" />


        <ImageButton
            android:id="@+id/button_audio_learn"
            android:layout_width="115dp"
            android:layout_height="74dp"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:background="@color/colorWhite"
            app:srcCompat="@drawable/ic_speak"
            android:contentDescription="@string/todo" />

        <ImageButton
            android:id="@+id/button_previous"
            android:layout_width="115dp"
            android:layout_height="74dp"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:background="@color/colorWhite"
            app:srcCompat="@drawable/ic_back_arrow"

            android:textSize="30sp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/todo" />


    </RelativeLayout>


</LinearLayout>